--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
 			<h1>ISBN-barcode creator</h1>
 
+			<ol>
+				<li>Paste in your ISBN and click 'Get barcode'.</li>
+				<li>Click 'Save SVG' to save it to your computer.</li>
+				<li>To place it in InDesign, first use Adobe Illustrator to save as <code>.ai</code> or PDF.</li>
+			</ol>
+
 			<!-- A form for capturing a user's ISBN -->
 			<form>
 				<label for="isbn">Enter ISBN</label>
