--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<ol>
 				<li>Paste in your ISBN and click 'Get barcode'.</li>
 				<li>Click 'Save SVG' to save it to your computer.</li>
-				<li>To place it in InDesign, first use Adobe Illustrator to save as <code>.ai</code> or PDF.</li>
+				<li>You can place the SVG in InDesign, or use Adobe Illustrator to save as <code>.ai</code> or PDF.</li>
 			</ol>
 
 			<!-- A form for capturing a user's ISBN -->
