--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 		<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-27798626-6"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
 
-		  gtag('config', 'UA-27798626-6');
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-TP3SHENB6T"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-TP3SHENB6T');
 		</script>
 
 	</head>
